ajout de fonctions avec Nelmio
